--- a/index.html
+++ b/index.html
@@ -21,71 +21,71 @@
 <div class="cells-board-wrapper">
     <div class="cells-board">
         <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg\image_5450.svg"></button>
+    <img width="56" height="56" src="output\image_5450.svg"></button>
     <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg\image_11641.svg"></button>
+    <img width="56" height="56" src="output\image_11641.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg\image_18337.svg"></button>
+    <img width="56" height="56" src="output\image_18337.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg\image_24493.svg"></button>
+    <img width="56" height="56" src="output\image_24493.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg\image_31201.svg"></button>
+    <img width="56" height="56" src="output\image_31201.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_37357.svg"></button>
+    <img width="56" height="56" src="output/image_37357.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_44065.svg"></button>
+    <img width="56" height="56" src="output/image_44065.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_50221.svg"></button>
+    <img width="56" height="56" src="output/image_50221.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_56929.svg"></button>
+    <img width="56" height="56" src="output/image_56929.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_63085.svg"></button>
+    <img width="56" height="56" src="output/image_63085.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_69793.svg"></button>
+    <img width="56" height="56" src="output/image_69793.svg"></button>
 
 <button id="cellButton" type="button" class="cell"><img width="40" height="40" src="img/stars.svg" class="star-animation fade-in" style="opacity: 0; transform: scale(0);"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_82645.svg"></button>
+    <img width="56" height="56" src="output/image_82645.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_89353.svg"></button>
+    <img width="56" height="56" src="output/image_89353.svg"></button>
 
 <button id="cellButton" type="button" class="cell"><img width="40" height="40" src="img/stars.svg" class="star-animation fade-in" style="opacity: 0; transform: scale(0);"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_102217.svg"></button>
+    <img width="56" height="56" src="output/image_102217.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_108373.svg"></button>
+    <img width="56" height="56" src="output/image_108373.svg"></button>
 
 <button id="cellButton" type="button" class="cell"><img width="40" height="40" src="img/stars.svg" class="star-animation fade-in" style="opacity: 0; transform: scale(0);"></button>
 
 <button id="cellButton" type="button" class="cell"><img width="40" height="40" src="img/stars.svg" class="star-animation fade-in" style="opacity: 0; transform: scale(0);"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_127381.svg"></button>
+    <img width="56" height="56" src="output/image_127381.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_134077.svg"></button>
+    <img width="56" height="56" src="output/image_134077.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_140221.svg"></button>
+    <img width="56" height="56" src="output/image_140221.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_146917.svg"></button>
+    <img width="56" height="56" src="output/image_146917.svg"></button>
 
 <button id="cellButton" type="button" class="cell">
-    <img width="56" height="56" src="output_svg/image_153061.svg"></button>
+    <img width="56" height="56" src="output/image_153061.svg"></button>
 
 <button id="cellButton" type="button" class="cell"><img width="40" height="40" src="img/stars.svg" class="star-animation fade-in" style="opacity: 0; transform: scale(0);"></button>
         <div class="cells-board-mask">
